fix margin issue on collapsed

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,7 @@
   height: 100vh;
   overflow-y: auto;
 }
+
+.content.collapsed {
+  margin-left: 100px;
+}
